@@ -16,7 +16,6 @@ class Regex {
   
   has re2 : Regex::Re2;
   has captures : ro string[];
-  has match_start : ro int;
   has match_length : ro int;
   has replaced_count : ro int;
   
