@@ -1,7 +1,8 @@
 0.246 2025-01-21
   [Bug Fix]
     * Fix a bug that if $offset_ref argument of Regex#match_foward method is undef, segfault occurs.
-    
+  [Incompatible Changes]
+    * Remove Regex#match_start field.
 0.245 2025-01-17
   [Changes]
     * Load Resource::RE2 class.
